--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_install:
   - export PATH=$PATH:$PWD/lua_install/bin
   
 install:
-  - luarocks install inspect
+  - luarocks install lredux
   - luarocks install luacheck
   - luarocks install busted
   - luarocks install luacov
